--- a/src/scss/section-form.scss
+++ b/src/scss/section-form.scss
@@ -84,6 +84,7 @@
 
     &__item {
         color: #4f4f4f;
+        position: relative;
 
         &:not(:first-child) {
             flex: 0 1 50%;
@@ -94,15 +95,26 @@
         }
 
         &:nth-child(-n+3) {
-            margin-bottom: 20px;
+            margin-bottom: 25px;
         }
     }
 
     &__label {
+        position: absolute;
+        top: 16px;
+        left: 29px;
+        -webkit-transition: top 200ms ease-in, left 200ms ease-in, font-size 200ms ease-in;
+        transition: top 200ms ease-in, left 200ms ease-in, font-size 200ms ease-in;
+        cursor: text;
+
+        span {
+            color: #ff4848;
+        }
     }
 
     &__input {
-        background: rgba(0, 9, 60, 0.1);
+        background: #e5e6eb;
+        border: 1px solid #e5e6eb;
         border-radius: 6px;
         display: block;
         padding: 16px 19px;
@@ -111,11 +123,18 @@
 
         &:focus {
             box-shadow: 0 0 10px #27aae1;
+            border: 1px solid #27aae1;
             background: #fff;
+        }
+
+        &:valid {
+            background: #fff;
+            border: 1px solid #27aae1;
         }
 
         &._error {
             box-shadow: 0 0 10px #e12727;
+            border: 1px solid #e12727;
         }
     }
 
@@ -137,5 +156,16 @@
         border-radius: 10px;
         padding: 12px 15px;
         width: 100%;
+    }
+
+    .form__input:focus ~ .form__label,
+    .form__input:not(:placeholder-shown).form__input:not(:focus) ~ .form__label {
+        top: -1.2rem;
+        font-size: 0.8rem;
+        left: 1rem;
+
+        &.form__label {
+            padding: 0 5px;
+        }
     }
 }
