--- a/src/scss/section-form.scss
+++ b/src/scss/section-form.scss
@@ -48,9 +48,6 @@
         align-items: center;
     }
 
-    &__image-text {
-    }
-
     .image-text {
         padding: 0 15px 0 50px;
 
@@ -101,7 +98,7 @@
 
     &__label {
         position: absolute;
-        top: 16px;
+        top: 17px;
         left: 29px;
         -webkit-transition: top 200ms ease-in, left 200ms ease-in, font-size 200ms ease-in;
         transition: top 200ms ease-in, left 200ms ease-in, font-size 200ms ease-in;
@@ -160,12 +157,8 @@
 
     .form__input:focus ~ .form__label,
     .form__input:not(:placeholder-shown).form__input:not(:focus) ~ .form__label {
-        top: -1.2rem;
-        font-size: 0.8rem;
-        left: 1rem;
-
-        &.form__label {
-            padding: 0 5px;
-        }
+        top: -18px;
+        left: 20px;
+        font-size: 11px;
     }
 }
