--- a/src/scss/section-faq.scss
+++ b/src/scss/section-faq.scss
@@ -32,12 +32,12 @@
     }
 
     &__question {
+        padding: 20px 60px 20px 30px;
         font-weight: 500;
         @include adaptiv-font(18, 16);
-        line-height: 188.89%;
+        line-height: 140%;
         position: relative;
         cursor: pointer;
-        padding: 20px 60px 20px 30px;
 
         &::before {
             content: '';
@@ -45,14 +45,12 @@
             height: 17px;
             background: url("../img/section-faq/svg/plus.svg") 0 0 no-repeat;
             position: absolute;
-            top: 28.42px;
             right: 30px;
             transition: .3s;
         }
 
         &.active + .faq__answer {
             max-height: 300px;
-            padding-bottom: 20px;
             transition: all .3s ease 0s;
         }
 
@@ -62,11 +60,9 @@
     }
 
     &__answer {
+        padding: 0 30px;
         line-height: 185.71%;
         max-width: 1010px;
-        padding-right: 30px;
-        padding-left: 30px;
-        padding-bottom: 0;
         height: auto;
         max-height: 0;
         overflow: hidden;
@@ -114,5 +110,13 @@
         opacity: 0.3;
         filter: blur(5px);
         border-radius: 6px;
+    }
+}
+
+@media (max-width: 480px) {
+    .faq {
+        &__answer {
+            overflow-y: scroll;
+        }
     }
 }
