--- a/src/scss/section-form.scss
+++ b/src/scss/section-form.scss
@@ -217,20 +217,84 @@
     }
 }
 
-@media (max-width: 720px) {
+@media (max-width: 680px) {
     .form-section {
         &__left {
-            margin-bottom: 20px;
+            flex: 0 1 auto;
+            margin-bottom: 0;
+            display: block;
+            height: 220px;
+            padding-left: 0;
 
             &::before {
-                top: 0;
-                left: 0;
-                width: 25%;
-                height: 160px;
+                width: 100%;
             }
         }
 
         &__right {
+            flex: 0 1 auto;
+        }
+
+        &__image {
+            position: absolute;
+            top: 0;
+            left: 140px;
+        }
+    }
+}
+
+@media (max-width: 630px) {
+    .form-section {
+        &__left {
+            height: 180px;
+
+            &::before {
+                height: 150px;
+            }
+        }
+
+        &__image {
+            scale: 0.7;
+            top: -30px;
+            left: 80px;
+        }
+    }
+}
+
+@media (max-width: 548px) {
+    .form-section {
+        &__left {
+            height: 140px;
+
+            &::before {
+                height: 120px;
+            }
+        }
+
+        &__image {
+            scale: 0.6;
+            top: -40px;
+            left: 30px;
+        }
+    }
+    .form {
+        &__item {
+            &:not(:first-child) {
+                flex: 0 1 100%;
+            }
+
+            &:nth-child(-n+3) {
+                margin-bottom: 25px;
+            }
+        }
+
+        &__info {
+            flex: 0 1 100%;
+            margin-bottom: 25px;
+        }
+
+        &__button-wrapper {
+            flex: 0 1 100%;
         }
     }
 }
