--- a/src/scss/section-form.scss
+++ b/src/scss/section-form.scss
@@ -298,3 +298,38 @@
         }
     }
 }
+
+@media (max-width: 478px) {
+    .form-section {
+        &__left {
+            height: auto;
+            margin-bottom: 35px;
+
+            &::before {
+                display: none;
+            }
+        }
+
+        &__image {
+            scale: 1;
+            background: none;
+            position: static;
+            display: block;
+            width: 100%;
+            height: 100%;
+
+            .image-text {
+                padding: 0;
+                text-align: center;
+
+                &__title {
+                    font-size: 20px;
+                }
+
+                &__subtitle {
+                    font-size: 14px;
+                }
+            }
+        }
+    }
+}
