--- a/src/scss/footer.scss
+++ b/src/scss/footer.scss
@@ -42,6 +42,7 @@
         padding-top: 69px;
 
         &__logo {
+            display: inline-block;
             margin-bottom: 47px;
         }
 
