--- a/src/scss/footer.scss
+++ b/src/scss/footer.scss
@@ -10,9 +10,13 @@
     }
 
     &__column {
-        flex: 0 1 20%;
+        flex: 0 1 19%;
         padding: 0 30px;
         color: #fff;
+
+        &.first-column {
+            flex: 0 1 24%;
+        }
     }
 
     &__label {
@@ -42,7 +46,7 @@
         padding-top: 69px;
 
         &__logo {
-            display: inline-block;
+            display: block;
             margin-bottom: 47px;
         }
 
@@ -81,9 +85,6 @@
             justify-content: space-between;
             align-items: center;
             margin-bottom: 33px;
-        }
-
-        &__social-item {
         }
 
         &__copyright {
