--- a/src/scss/footer.scss
+++ b/src/scss/footer.scss
@@ -94,3 +94,147 @@
         }
     }
 }
+
+@media (max-width: 1180px) {
+    .footer {
+        &__wrapper {
+            flex-wrap: wrap;
+        }
+
+        &__column {
+            flex: 0 1 25%;
+
+            &.first-column {
+                flex: 0 1 100%;
+                display: flex;
+                justify-content: space-between;
+                align-items: center;
+            }
+        }
+
+        .first-column {
+            display: grid;
+            grid-template-columns: 0.7fr 1fr 1fr 1fr;
+            grid-template-rows: repeat(2, 1fr);
+            grid-template-areas: 'logo phone address email' 'logo social copyright copyright';
+            grid-column-gap: 10px;
+            grid-row-gap: 20px;
+            margin-bottom: 60px;
+            padding-top: 40px;
+
+            &__logo {
+                grid-area: logo;
+            }
+
+            &__phone {
+                grid-area: phone;
+            }
+
+            &__address {
+                grid-area: address;
+            }
+
+            &__email {
+                grid-area: email;
+            }
+
+            &__social {
+                grid-area: social;
+                justify-content: flex-start;
+            }
+
+            &__social-item {
+                &:not(:last-child) {
+                    margin-right: 20px;
+                }
+            }
+
+            &__copyright {
+                grid-area: copyright;
+            }
+
+            & * {
+                margin-bottom: 0;
+            }
+        }
+    }
+}
+
+@media (max-width: 1024px) {
+    .footer {
+        &__column {
+            flex: 0 1 50%;
+
+            &:not(:nth-child(-n+3)) {
+                margin-top: 30px;
+            }
+        }
+
+        .first-column {
+            grid-template-columns: 0.5fr 1fr 1fr 1fr;
+        }
+    }
+}
+
+@media (max-width: 840px) {
+    .footer {
+        .first-column {
+            grid-template-columns: 0.5fr 1fr 1fr;
+            grid-template-rows: repeat(3, 1fr);
+            grid-template-areas: 'logo phone address' 'logo email social' 'logo copyright copyright';
+            align-items: start;
+        }
+    }
+}
+
+@media (max-width: 600px) {
+    .footer {
+        .first-column {
+            grid-template-columns: 1fr 1fr;
+            grid-template-rows: repeat(4, 1fr);
+            grid-template-areas: 'logo phone' 'logo email' 'logo social' 'address copyright';
+            align-items: center;
+        }
+    }
+}
+
+@media (max-width: 480px) {
+    .footer {
+        .first-column {
+            display: block;
+
+            &__logo {
+                margin-bottom: 47px;
+            }
+
+            &__phone {
+                margin-bottom: 22px;
+            }
+
+            &__address {
+                margin-bottom: 22px;
+            }
+
+            &__email {
+                margin-bottom: 41px;
+            }
+
+            &__social {
+                margin-bottom: 33px;
+            }
+        }
+
+        &__column {
+            padding: 0 60px;
+
+            &:not(:first-child) {
+                display: none;
+            }
+
+            &.first-column {
+                margin-bottom: 0;
+                padding-top: 30px;
+            }
+        }
+    }
+}
