--- a/src/scss/section-banner.scss
+++ b/src/scss/section-banner.scss
@@ -80,67 +80,69 @@
         }
     }
 
-    &__item--1 {
-        width: 100px;
-        height: 100px;
-        background: url("../img/section-banner/svg/cross.svg") 0 0 no-repeat;
-        position: absolute;
-        top: 161px;
-        right: 62px;
-    }
+    &__item {
+        &--1 {
+            width: 100px;
+            height: 100px;
+            background: url("../img/section-banner/svg/cross.svg") 0 0 no-repeat;
+            position: absolute;
+            top: 161px;
+            right: 62px;
+        }
 
-    &__item--2 {
-        width: 128px;
-        height: 128px;
-        background: url("../img/section-banner/svg/circle.svg") 0 0 no-repeat;
-        position: absolute;
-        bottom: 42px;
-        left: 37px;
-    }
+        &--2 {
+            width: 128px;
+            height: 128px;
+            background: url("../img/section-banner/svg/circle.svg") 0 0 no-repeat;
+            position: absolute;
+            bottom: 42px;
+            left: 37px;
+        }
 
-    &__item--3 {
-        width: 99px;
-        height: 82px;
-        background: url("../img/section-banner/svg/triangle-1.svg") 0 0 no-repeat;
-        position: absolute;
-        top: 24px;
-        left: 119px;
-    }
+        &--3 {
+            width: 99px;
+            height: 82px;
+            background: url("../img/section-banner/svg/triangle-1.svg") 0 0 no-repeat;
+            position: absolute;
+            top: 24px;
+            left: 119px;
+        }
 
-    &__item--4 {
-        width: 401px;
-        height: 93px;
-        background: url("../img/section-banner/svg/curve-2.svg") 0 0 no-repeat;
-        position: absolute;
-        top: 206px;
-        left: -243px;
-    }
+        &--4 {
+            width: 401px;
+            height: 93px;
+            background: url("../img/section-banner/svg/curve-2.svg") 0 0 no-repeat;
+            position: absolute;
+            top: 206px;
+            left: -243px;
+        }
 
-    &__item--5 {
-        width: 341px;
-        height: 133px;
-        background: url("../img/section-banner/svg/curve-3.svg") 0 0 no-repeat;
-        position: absolute;
-        bottom: -71px;
-        left: -388px;
-    }
+        &--5 {
+            width: 341px;
+            height: 133px;
+            background: url("../img/section-banner/svg/curve-3.svg") 0 0 no-repeat;
+            position: absolute;
+            bottom: -71px;
+            left: -388px;
+        }
 
-    &__item--6 {
-        width: 340px;
-        height: 133px;
-        background: url("../img/section-banner/svg/curve-4.svg") 0 0 no-repeat;
-        position: absolute;
-        bottom: -33px;
-        right: -286px;
-    }
+        &--6 {
+            width: 340px;
+            height: 133px;
+            background: url("../img/section-banner/svg/curve-4.svg") 0 0 no-repeat;
+            position: absolute;
+            bottom: -33px;
+            right: -286px;
+        }
 
-    &__item--7 {
-        width: 138px;
-        height: 115px;
-        background: url("../img/section-banner/svg/triangle-2.svg") 0 0 no-repeat;
-        position: absolute;
-        top: 45px;
-        right: -248px;
+        &--7 {
+            width: 138px;
+            height: 115px;
+            background: url("../img/section-banner/svg/triangle-2.svg") 0 0 no-repeat;
+            position: absolute;
+            top: 45px;
+            right: -248px;
+        }
     }
 }
 
@@ -249,6 +251,10 @@
             img {
                 object-position: bottom;
             }
+        }
+
+        &__item {
+            display: none;
         }
     }
 }
