--- a/src/scss/section-banner.scss
+++ b/src/scss/section-banner.scss
@@ -214,6 +214,18 @@
 @media (max-width: 1230px) {
     .banner {
         padding: 60px 0 0 0;
+
+        &__container {
+            &::before, &::after {
+                display: none;
+            }
+        }
+
+        &__item {
+            &--4, &--5, &--6, &--7 {
+                display: none;
+            }
+        }
     }
 }
 
