--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -71,7 +71,7 @@
         }
 
         &:nth-child(1) .menu__link {
-            padding: 0 0 0 28px;
+            margin: 0 0 0 28px;
         }
     }
 
@@ -129,11 +129,11 @@
         }
 
         &:nth-child(1) .contacts__link {
-            padding: 0 10px 0 26px;
+            margin: 0 10px 0 26px;
         }
 
         &:nth-child(3) .contacts__link {
-            padding: 0 0 0 26px;
+            margin: 0 0 0 26px;
         }
     }
 
