--- a/src/scss/section-targets.scss
+++ b/src/scss/section-targets.scss
@@ -429,6 +429,11 @@
         .benefits {
             &__item {
                 flex: 0 1 100%;
+                text-align: center;
+
+                &::before {
+                    left: 47%;
+                }
 
                 &:nth-child(-n+3) {
                     margin-bottom: 0;
