--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -8,6 +8,7 @@
 @import "section-educator";
 @import "section-faq";
 @import "section-form";
+@import "popup";
 @import "footer";
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap');
 
