--- a/src/scss/section-banner.scss
+++ b/src/scss/section-banner.scss
@@ -195,6 +195,8 @@
 }
 
 .button {
+    display: inline-block;
+    cursor: pointer;
     font-weight: 700;
     font-size: 14px;
     padding: 15px 21px;
