--- a/src/scss/popup.scss
+++ b/src/scss/popup.scss
@@ -38,6 +38,7 @@
     }
 
     &__content {
+        margin: 0 15px;
         background: #fff;
         border-radius: 20px;
         max-width: 800px;
