--- a/src/scss/popup.scss
+++ b/src/scss/popup.scss
@@ -12,7 +12,7 @@
     overflow-x: hidden;
     transition: all .5s ease 0s;
 
-    &:target {
+    &.open {
         opacity: 1;
         visibility: visible;
 
