--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -22,6 +22,10 @@ body {
     font-size: 14px;
     font-weight: 400;
     color: #000;
+
+    &.lock {
+        overflow: hidden;
+    }
 }
 
 .wrapper {
