--- a/src/scss/popup.scss
+++ b/src/scss/popup.scss
@@ -62,6 +62,11 @@
         top: 20px;
         right: 20px;
         rotate: 45deg;
+        transition: scale .3s ease 0s;
+
+        &:hover {
+            scale: 1.3;
+        }
     }
 
     &__title {
