--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -74,7 +74,7 @@
             margin: 0 40px 0 0;
         }
 
-        &:nth-child(1)::before {
+        /*&:nth-child(1)::before {
             content: '';
             background: url("../img/header/all-courses.svg") 0 0 no-repeat;
             display: inline-block;
@@ -82,10 +82,10 @@
             height: 16px;
             position: absolute;
             top: 0;
-        }
+        }*/
 
         &:nth-child(1) .menu__link {
-            margin: 0 0 0 28px;
+            padding-right: 10px;
         }
 
         // ------------ submenu ------------
@@ -183,6 +183,17 @@
         font-weight: 500;
         line-height: 121.43%;
     }
+
+    &__arrow {}
+
+    .arrow {
+        background: url("../img/header/arrow-bottom.svg") 0 0 no-repeat;
+        width: 12px;
+        height: 12px;
+        display: inline-block;
+        position: absolute;
+        top: 5px;
+    }
 }
 
 
@@ -219,7 +230,7 @@
             width: 12px;
             height: 12px;
             position: absolute;
-            top: 4px;
+            top: 5px;
         }
 
         &:nth-child(3)::before {
