Делаю стрелки для тачскринов в header menu 121122 22:07

--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -60,10 +60,6 @@
         position: relative;
         z-index: 2;
 
-        & > li:hover .submenu__list {
-            display: block;
-        }
-
         li {
             position: relative;
         }
@@ -74,18 +70,8 @@
             margin: 0 40px 0 0;
         }
 
-        /*&:nth-child(1)::before {
-            content: '';
-            background: url("../img/header/all-courses.svg") 0 0 no-repeat;
-            display: inline-block;
-            width: 20px;
-            height: 16px;
-            position: absolute;
-            top: 0;
-        }*/
-
         &:nth-child(1) .menu__link {
-            padding-right: 10px;
+            padding-right: 12px;
         }
 
         // ------------ submenu ------------
@@ -152,6 +138,8 @@
                     }
 
                     &__item {
+                        position: relative;
+
                         &:not(:last-child) {
                             border-bottom: 1px solid #fff;
                         }
@@ -173,8 +161,14 @@
             }
 
             &__link {
-                display: block;
+                display: inline-block;
                 padding: 10px 28px;
+            }
+
+            &__arrow {
+                position: absolute;
+                top: 13px;
+                left: 85%;
             }
         }
     }
@@ -184,15 +178,21 @@
         line-height: 121.43%;
     }
 
-    &__arrow {}
+    &__arrow {
+        position: absolute;
+        top: 5px;
+
+        &.active {
+            transform: rotate(-180deg);
+            top: 0;
+        }
+    }
 
     .arrow {
+        display: none;
         background: url("../img/header/arrow-bottom.svg") 0 0 no-repeat;
         width: 12px;
         height: 12px;
-        display: inline-block;
-        position: absolute;
-        top: 5px;
     }
 }
 
