--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -20,7 +20,6 @@
 
     &__body {
         display: flex;
-        justify-content: space-between;
         min-height: 110px;
         align-items: center;
         position: relative;
@@ -32,6 +31,7 @@
         background: url("../img/header/logo-dark.svg") 0 0 no-repeat;
         width: 100px;
         height: 70.65px;
+        margin-right: 40px;
     }
 
     &__burger {
@@ -41,6 +41,7 @@
     &__info {
         display: flex;
         justify-content: space-between;
+        flex: 1 1 auto;
     }
 
     &__menu {
@@ -286,6 +287,7 @@
 
         &__body {
             min-height: 60px;
+            justify-content: space-between;
         }
 
         &__logo {
