--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -221,7 +221,11 @@
         }
 
         &:nth-child(1) {
-            margin: 0 52px 0 0;
+            span {
+                font-weight: 500;
+                color: #000;
+                margin: 0 0 0 26px;
+            }
         }
 
         &:nth-child(1)::before {
@@ -232,16 +236,6 @@
             height: 20px;
             position: absolute;
             top: -3px;
-        }
-
-        &:nth-child(1)::after {
-            content: '';
-            background: url("../img/header/arrow-bottom.svg") 0 0 no-repeat;
-            display: inline-block;
-            width: 12px;
-            height: 12px;
-            position: absolute;
-            top: 5px;
         }
 
         &:nth-child(3)::before {
