--- a/src/scss/section-targets.scss
+++ b/src/scss/section-targets.scss
@@ -27,7 +27,7 @@
 
             &::after {
                 content: '';
-                background: url("../img/section-targets/owl.png") 0 0 no-repeat;
+                background: url("../img/svg/owl.svg") 0 0 no-repeat;
                 width: 168px;
                 height: 189px;
                 display: block;
